# Smart-Battleships-Game-V2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  ustawienia.txt
Inc/: bot.h  gui.h  obsluga_plikow.h  plansza.h  rozgrywka.h
Src/: bot.cpp  gui.cpp  obsluga_plikow.cpp  plansza.cpp  rozgrywka.cpp
bot/: bot.cpp  bot.h
gui/: gui.cpp  gui.h
plansza/: plansza.cpp  plansza.h
pliki/: obsluga_plikow.cpp  obsluga_plikow.h
pliki/log/: log.txt
rozgrywka/: rozgrywka.cpp  rozgrywka.h
